# StaticCouplingTool

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  filelist.cmake
application/: AbstractCouplingApplication.cpp  AbstractCouplingApplication.h  AbstractCouplingApplication.hpp  CLIParser.cpp  CLIParser.h  CLIParser.hpp  ClangCouplingApplication.cpp  ClangCouplingApplication.h  ClangCouplingApplication.hpp  ConfigurationArgumentDatabase.cpp  ConfigurationArgumentDatabase.h  ConfigurationArgumentDatabase.hpp  ConfigurationExporter.cpp  ConfigurationExporter.h  ConfigurationExporter.hpp  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationManager.hpp  JSONParser.cpp  JSONParser.h  JSONParser.hpp  configuration_args.json  filelist.cmake  main-coupling.cpp
configuration/: CLIParser.cpp  CLIParser.hpp  ConfigurationArgumentDatabase.cpp  ConfigurationArgumentDatabase.hpp  ConfigurationExporter.cpp  ConfigurationExporter.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  JSONParser.cpp  JSONParser.hpp  configuration_args.json  filelist.cmake
coupling/: AbstractCoupling.hpp  CouplingGraph.cpp  CouplingGraph.h  CouplingGraph.hpp  FileCouplingAnalyser.cpp  FileCouplingAnalyser.hpp  ICouplingAnalyser.hpp  IResultExporter.hpp  filelist.cmake
docker/: Dockerfile
language/: ICouplingFinder.hpp  filelist.cmake
scripts/: compare.py  compare2.py  highest_coupling_degree.py  highest_coupling_edges.py  highest_coupling_nodes2.py  linecount.py  linecountrank.py  reduce.py  render.py  to_gml.py
shared/: AbstractCoupling.hpp  ContainerUtils.cpp  FileUtils.cpp  (+3 more)
(+28 files in other folders)
