CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(StaticCouplingAnalyzer CXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(LLVM_LINK_COMPONENTS Support)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")

FIND_PACKAGE(LLVM 12 REQUIRED)
FIND_PACKAGE(Clang REQUIRED)
FIND_PACKAGE(Qt5Core)

LIST(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")

ADD_DEFINITIONS(${LLVM_DEFINITIONS})
INCLUDE_DIRECTORIES(${CLANG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
LINK_DIRECTORIES(${LLVM_LIBRARY_DIRS})

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/filelist.cmake")

ADD_EXECUTABLE(static-coupling-analyser ${SOURCE_FILES})


TARGET_LINK_LIBRARIES(static-coupling-analyser
        PRIVATE
        Qt5::Core
        clangAST
        clangBasic
        clangFrontend
        clangSerialization
        clangTooling)

TARGET_INCLUDE_DIRECTORIES(static-coupling-analyser PUBLIC ${INCLUDEDIRS})



